# Arilux_AL-LC0X

./: .gitignore  .travis.yml  Arilux.cpp  Arilux.h  Arilux_AL-LC0X.ino  BasicFilters.cpp  HSB.cpp  HSB.h  README.md  TransitionEffect.cpp  cie1931.py  config.h  platformio.ini  upload.sh
lib/helpers/: helpers.h
lib/hsb/: hsb.cpp  hsb.h
lib/lightningutils/: basiceffects.cpp  basiceffects.h  basicfilters.cpp  basicfilters.h  cie1931.h  cmdhandler.cpp  cmdhandler.h  colorcontrollerservice.cpp  colorcontrollerservice.h  colorseffect.cpp  effect.h  filter.h  hsbToRGB.cpp  hsbToRGB.h
lib/optparser/: optparser.cpp
lib/utils/: makeunique.h  propertyutils.cpp  propertyutils.h
libtest/: CMakeLists.txt  main.cpp
libtest/src/: arduinostubs.hpp  test_HSB.hpp  test_cmdhandler.hpp  test_colorcontrollerservice.hpp  test_colorseffect.hpp  test_helpers.hpp  test_hsbToRGB.hpp  test_optparser.hpp  test_rainboweffect.hpp  test_settings.hpp  test_transitioneffect.hpp  test_utils.hpp
openhab/html/static/: long-press.js
src/: Arilux_AL-LC0X.ino  HSB.cpp  HSB.h  WifiManagerTypes.h  config.h  customConfig_html.generated.h  jscript.generated.h  leds.h  main.cpp  mqttstore.cpp  mqttstore.h  newpwmleds.cpp  newpwmleds.h  pwm.c  pwmleds.cpp  pwmleds.h  settingsdto.h  statusModel.h
web/: customConfig.html
